# BananaPi_M64_Portable

./: ConsoleAdapter.fzz  IOPlate.tcl  LCDMountingBracket.tcl  PSBox.tcl  PortableCasee.tcl  README
3DModel/: 3DPrinting.py  BananaPiM64Model.py  BananaPiM64Model.tcl  Battery.py  Battery.tcl  BlockDrillDrawings.py  Capacitors.py  Capacitors.tcl  Case.py  Case.tcl  Common.tcl  DCDC-5-12.tcl  DCDC_5_12.py  Diode.py  Diode.tcl  Electromech.py  Electromech.tcl  FuseHolder.py  FuseHolder.tcl  HDMIConverter.py  HDMIConverter.tcl  LCDMountingBracket.py  LCDMountingBracket.tcl  LCDScreen.py  LCDScreen.tcl  M64.py  M64.tcl  MOV.py  MOV.tcl  MachineWorkDrawings.py  Makefile.am  OTGAdaptor.py  OTGAdaptor.tcl  PSBox.py  PSBox.tcl  PSPCB.py  PSPCB.tcl  PSPCB_Drawing.py  PanelCutSheet.py  PianoHinge.py  (+22 more)
3DModel/m4/: ax_tcl_libraries.m4
CoverImage/: Cover1.xcf
DCDC-5-12/: DCDC-5-12-cache.lib  DCDC-5-12.cmp  DCDC-5-12.kicad_pcb  DCDC-5-12.net  DCDC-5-12.pro  DCDC-5-12.sch  Inductor_5mmx5mm.mod  SuperSOT-6.mod  adp1610.dcm  adp1610.lib  fdc6331.dcm  fdc6331.lib
DCDC3_7-5+12/: DCDC3-7-12.sch  DCDC3-7-5.sch  DCDC3_7-5+12-cache.lib  DCDC3_7-5+12.csv  DCDC3_7-5+12.kicad_pcb  DCDC3_7-5+12.net  DCDC3_7-5+12.pro  DCDC3_7-5+12.sch  DCDC3_7-5+12.xml  TPS61088QRHLRQ1.lib  lm3488.lib  xl6009.lib
DCDC3_7-5+12/MyCaps.pretty/: CAPPM7343X310N.kicad_mod  C_1206_Pol.kicad_mod
DCDC3_7-5+12/PM5022S-330M-RC.pretty/: INDPM183140X690N.kicad_mod
DCDC3_7-5+12/Q3.pretty/: Q3.kicad_mod
DCDC3_7-5+12/SDR1307-330KL.pretty/: SDR1307330KL.kicad_mod
DCDC3_7-5+12/TPS61088QRHLRQ1.pretty/: TPS61088QRHLRQ1.kicad_mod
DCDC3_7-5+12/XAL6030.pretty/: INDM5564X32N.kicad_mod
TeensyJoystick/: JoyAxis.cpp  JoyAxis.h  MiniThumbStickBreakout.mod  PWMLed.h  TeensyJoystick-cache.lib  TeensyJoystick-rescue.lib  TeensyJoystick.cmp  TeensyJoystick.fzz  TeensyJoystick.ino  TeensyJoystick.kicad_pcb  TeensyJoystick.net  TeensyJoystick.pro  TeensyJoystick.sch  TeensyJoystick_Box.py  TeensyJoystick_protobreadboard.fzz  TeensyJoystick_stripboard.fzz  fp-lib-table  thumb_stick.lib
